# KeepAliveE5

./: README.md  crypto.py  pyproject.toml  reset.sh  routine.sh  task.py  util.py
.github/workflows/: register.yml  routine.yml
config/: app0.json
register/: client.js  package-lock.json  package.json  register_apps_by_force.sh  required-resource-accesses.json  server.js
